# django_cowsay

./: README.md  db.sqlite3  pyproject.toml
cowsays/: admin.py  apps.py  forms.py  models.py  views.py
cowsays/migrations/: 0001_initial.py  0002_auto_20200817_1758.py
django_cowsay/: settings.py  urls.py
templates/: history.html  index.html
