[tool.poetry]
name = "django_cowsay"
version = "0.1.0"
description = "\"Cowsay assignment\""
authors = ["Ruben Espino <56930001+r-o-e-574@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^2.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
